app/src/main/java/com/example/fail/MainDataItem.kt
package com.example.fail

data class MainDataItem(
    val city: City,
    val cnt: Int,
    val cod: String,
    val list: List<Dt>,
    val message: Int
)